--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ asgiref==3.5.0
 asyncclick==8.0.3.2
 asyncpg==0.25.0
 bcrypt==3.2.0
+black==21.12b0
+boto3==1.20.43
+botocore==1.23.43
 cffi==1.15.0
 click==8.0.3
 databases==0.5.5
@@ -12,21 +15,29 @@ greenlet==1.1.2
 h11==0.13.0
 httptools==0.3.0
 idna==3.3
+jmespath==0.10.0
 Mako==1.1.6
 MarkupSafe==2.0.1
+mypy-extensions==0.4.3
 passlib==1.7.4
+pathspec==0.9.0
+platformdirs==2.4.1
 psycopg2-binary==2.9.3
 pycparser==2.21
 pydantic==1.9.0
 PyJWT==2.3.0
+python-dateutil==2.8.2
 python-decouple==3.5
 python-dotenv==0.19.2
 PyYAML==6.0
+s3transfer==0.5.0
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.31
 starlette==0.17.1
+tomli==1.2.3
 typing_extensions==4.0.1
+urllib3==1.26.8
 uvicorn==0.17.0
 uvloop==0.16.0
 watchgod==0.7
